Set relay output

--- a/nodes/core/output/ir.html
+++ b/nodes/core/output/ir.html
@@ -3,9 +3,10 @@
         category: 'output',
         color: '#a6bbcf',
         defaults: {
-            command: {value:""},
-            sms: {value:""},
-            email: {value:""}
+            command: {value: ""},
+            sms: {value: ""},
+            email: {value: ""},
+            func: {value: ""}
         },
         inputs:1,
         outputs:0,
