Set functions on nodes

--- a/nodes/core/functions/min.html
+++ b/nodes/core/functions/min.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('Minimum',{
+    RED.nodes.registerType('Min',{
         category: 'function',
         color: '#a6bbcf',
         defaults: {
@@ -15,13 +15,13 @@
     });
 </script>
 
-<script type="text/x-red" data-template-name="Minimum">
+<script type="text/x-red" data-template-name="Min">
     <div class="form-row">
         <label for="node-input-value"><i class="icon-tag"></i> Value</label>
         <input type="text" id="node-input-value" placeholder="Value">
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="Minimum">
+<script type="text/x-red" data-help-name="Min">
     <p>Minimum value (<) or lower than...</p>
 </script>
