--- a/nodes/core/inputs/pir.html
+++ b/nodes/core/inputs/pir.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('pir',{
+    RED.nodes.registerType('Pir',{
         category: 'input',
         color: '#a6bbcf',
         defaults: {
@@ -10,18 +10,18 @@
         outputs:1,
         icon: "file.png",
         label: function() {
-            return this.name||"pir";
+            return this.name||"Pir";
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="pir">
+<script type="text/x-red" data-template-name="Pir">
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="pir">
+<script type="text/x-red" data-help-name="Pir">
     <p>PIR</p>
 </script>
