--- a/nodes/core/functions/max.html
+++ b/nodes/core/functions/max.html
@@ -1,27 +1,27 @@
 <script type="text/javascript">
-    RED.nodes.registerType('Maximum',{
+    RED.nodes.registerType('Max',{
         category: 'function',
         color: '#a6bbcf',
         defaults: {
             value: {value:"", validate:RED.validators.number()},
-            func: {value:""}
+            func: {value: ''}
         },
         inputs:1,
         outputs:1,
         icon: "file.png",
         label: function() {
-            return ">"+this.value||"max";
+            return ">"+this.value||">";
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="Maximum">
+<script type="text/x-red" data-template-name="Max">
     <div class="form-row">
         <label for="node-input-value"><i class="icon-tag"></i> Value</label>
         <input type="text" id="node-input-value" placeholder="Value">
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="Maximum">
+<script type="text/x-red" data-help-name="Max">
     <p>Maximum than (>) or greater than...</p>
 </script>
