set style on relay and ir display

--- a/nodes/core/output/relay.html
+++ b/nodes/core/output/relay.html
@@ -24,19 +24,19 @@
 <script type="text/x-red" data-template-name="Relay">
     <div class="form-row">
         <label for="node-input-on_or_off"><i class="icon-tag"></i> On or Off</label>
-        <input type="checkbox" id="node-input-on_or_off">
+        <input type="checkbox" id="node-input-on_or_off"> <br/>
         <label for="node-input-sms_checkbox"><i class="icon-tag"></i> SMS</label>
-        <input type="checkbox" id="node-input-sms_checkbox" placeholder="SMS">
+        <input type="checkbox" id="node-input-sms_checkbox" placeholder="SMS"><br/>
         <label for="node-input-whats_app_checkbox"><i class="icon-tag"></i> WhatsApp</label>
-        <input type="checkbox" id="node-input-whats_app_checkbox">
+        <input type="checkbox" id="node-input-whats_app_checkbox"><br/>
         <label for="node-input-sms"><i class="icon-tag"></i>Phone Number</label>
-        <input type="text" id="node-input-sms" placeholder="SMS">
+        <input type="text" id="node-input-sms" placeholder="SMS"><br/>
         <label for="node-input-email_checkbox"><i class="icon-tag"></i> Email</label>
-        <input type="checkbox" id="node-input-email_checkbox" placeholder="Email">
+        <input type="checkbox" id="node-input-email_checkbox" placeholder="Email"><br/>
         <label for="node-input-email"><i class="icon-tag"></i> Email</label>
-        <input type="text" id="node-input-email" placeholder="Email">
+        <input type="text" id="node-input-email" placeholder="Email"><br/>
         <label for="node-input-message"><i class="icon-tag"></i>Message</label>
-        <textarea style="width: 91%;margin-top: 5px; resize: none;" id="node-input-message" placeholder="Message"/>
+        <textarea style="width: 91%;margin-top: 5px; resize: none;" id="node-input-message" placeholder="Message"/><br/>
         <script>
             $('input[type=checkbox]').change(function(){
                 if($(this).prop("checked")) {
