--- a/nodes/core/output/ir.html
+++ b/nodes/core/output/ir.html
@@ -27,17 +27,17 @@
         <input type="text" id="node-input-command" placeholder="Command">
         <div class="row" style="margin:0;">
             <label for="node-input-sms_checkbox"><i class="icon-tag"></i> SMS</label>
-            <input type="checkbox" id="node-input-sms_checkbox" placeholder="SMS">
+            <input type="checkbox" id="node-input-sms_checkbox" placeholder="SMS"><br/>
             <label for="node-input-whats_app_checkbox"><i class="icon-tag"></i> WhatsApp</label>
-            <input type="checkbox" id="node-input-whats_app_checkbox">
+            <input type="checkbox" id="node-input-whats_app_checkbox"><br/>
             <label for="node-input-sms"><i class="icon-tag"></i>Phone Number</label>
-            <input type="text" id="node-input-sms" placeholder="SMS">
+            <input type="text" id="node-input-sms" placeholder="SMS"><br/>
             <label for="node-input-email_checkbox"><i class="icon-tag"></i> Email</label>
-            <input type="checkbox" id="node-input-email_checkbox" placeholder="Email">
+            <input type="checkbox" id="node-input-email_checkbox" placeholder="Email"><br/>
             <label for="node-input-email"><i class="icon-tag"></i> Email</label>
-            <input type="text" id="node-input-email" placeholder="Email">
+            <input type="text" id="node-input-email" placeholder="Email"><br/>
             <label for="node-input-message"><i class="icon-tag"></i>Message</label>
-            <textarea style="width: 91%;margin-top: 5px; resize: none;" id="node-input-message" placeholder="Message"/>
+            <textarea style="width: 91%;margin-top: 5px; resize: none;" id="node-input-message" placeholder="Message"/><br/>
         </div>
     </div>
     <script>
